--- a/templates/openweathermap.html
+++ b/templates/openweathermap.html
@@ -1,16 +1,14 @@
 <div class="row vertical-align">
-    <div class="col-xs-5">
+    <div class="col-xs-4 col-sm-5 padding0">
         <div class="pull-right">
             <p class="weatherRight weatherLarge" data-content="city"></p>
             <p class="weatherRight weatherDesc" data-content="curcondition"></p>
         </div>
     </div>
-    <div class="col-xs-2">
-        <div class="weatherIcon">
-            <img src="" data-src="icon" />
-        </div>
+    <div class="col-xs-4 col-sm-2 paddingLeftRight5">
+        <div class="weatherIcon padding0" data-innerHTML="icon" data-format="OWMIconCode" id="weatherIcon"></div>
     </div>
-    <div class="col-xs-5">
+    <div class="col-xs-4 col-sm-5 padding0">
         <div class="pull-left">
             <p class="weatherLeft weatherLarge" data-content="curtemp"></p>
             <p class="weatherLeft" data-content="curLowHigh"></p>
