--- a/templates/wunderground.html
+++ b/templates/wunderground.html
@@ -1,17 +1,17 @@
 <div class="row vertical-align">
-    <div class="col-xs-5 paddingRight0">
+    <div class="col-xs-4 col-sm-5 padding0">
         <div class="pull-right">
-            <p class="right margin0 weatherLarge" data-content="current_observation.display_location.full"></p>
-            <p class="right margin0 weatherDesc" data-content="current_observation.weather"></p>
+            <p class="textright margin0 weatherLarge" data-content="current_observation.display_location.full"></p>
+            <p class="textright margin0 weatherDesc" data-content="current_observation.weather"></p>
         </div>
     </div>
-    <div class="col-xs-2">
-        <div class="weatherIcon padding0" data-content="icon_code_white" id="weatherIcon"></div>
+    <div class="col-xs-4 col-sm-2 paddingLeftRight5">
+        <div class="weatherIcon padding0" data-innerHTML="current_observation.icon" data-format="IconCode" id="weatherIcon"></div>
     </div>
-    <div class="col-xs-5 paddingLeft0">
+    <div class="col-xs-4 col-sm-5 padding0">
         <div class="pull-left">
-            <p class="left margin0 weatherLarge" data-content="curtemp"></p>
-            <p class="left margin0" data-content="feelslike"></p>
+            <p class="textleft margin0 weatherLarge" data-content="curtemp"></p>
+            <p class="textleft margin0" data-content="feelslike"></p>
         </div>
     </div>
 </div>
@@ -34,41 +34,54 @@
                 <div class="row vertical-align">
                     <div class="col-xs-5 paddingRight0">
                         <div class="pull-right">
-                            <p class="right margin0 weatherLarge" data-content="current_observation.display_location.full"></p>
-                            <p class="right margin0 weatherDesc" data-content="current_observation.weather"></p>
+                            <p class="textright margin0 weatherLarge" data-content="current_observation.display_location.full"></p>
+                            <p class="textright margin0 weatherDesc" data-content="current_observation.weather"></p>
                         </div>
                     </div>
                     <div class="col-xs-2">
-                        <div class="weatherIcon padding0" data-content="icon_code_black"></div>
+                        <div class="weatherIcon padding0" data-innerHTML="current_observation.icon" data-format="IconCode"></div>
                     </div>
                     <div class="col-xs-5 paddingLeft0">
                         <div class="pull-left">
-                            <p class="left margin0 weatherLarge" data-content="curtemp"></p>
-                            <p class="left margin0" data-content="feelslike"></p>
+                            <p class="textleft margin0 weatherLarge" data-content="curtemp"></p>
+                            <p class="textleft margin0" data-content="feelslike"></p>
                         </div>
                     </div>
                 </div>
-                <div class="row" style="margin-bottom: 10px;">
-                    <div class="col-xs-12">
-                        <p class="weatherWind" data-content="wind"></p>
-                    </div>
-                </div>
                 <div class="row">
-                    <div class="col-sm-5 col-sm-offset-2">
-                        <p class="left margin0 weatherSmall" data-content="dewpoint"></p>
-                        <p class="left margin0 weatherSmall" data-content="humidity"></p>
-                        <p class="left margin0 weatherSmall" data-content="preciprate"></p>
-                        <p class="left margin0 weatherSmall" data-content="precipaccum"></p>
-                        <p class="left margin0 weatherSmall" data-content="pressure"></p>
-                    </div>
-                    <div class="col-sm-5">
-                        <p class="left margin0 weatherSmall" data-content="windchill"></p>
-                        <p class="left margin0 weatherSmall" data-content="visibility"></p>
-                        <p class="left margin0 weatherSmall" data-content="uv"></p>
-                        <p class="left margin0 weatherSmall" data-content="solarradiation"></p>
-                        <p class="left margin0 weatherSmall" data-content="heatindex"></p>
+                    <div class="col-xs-12 wind">
+                        <p class="textcenter margin0 wind-direction">
+                            <span data-innerHTML="current_observation.wind_degrees" data-format="WindIconCode"></span>
+                            <span data-innerHTML="current_observation.wind_string" class="wind-string"></span>
+                        </p>
                     </div>
                 </div>
+
+
+                <div class="row">
+                    <button class="btn btn-link btn-weatherDetail" type="button" data-toggle="collapse" data-target="#currentDetails" aria-expanded="false" aria-controls="currentDetails">
+                    Details <i class="fa fa-chevron-right pull-right"></i>
+                            <i class="fa fa-chevron-down pull-right"></i>
+                    </button>
+
+                    <div class="collapse" id="currentDetails">
+                        <div class="col-sm-5 col-sm-offset-2">
+                            <p class="textleft margin0 weatherSmall" data-content="dewpoint"></p>
+                            <p class="textleft margin0 weatherSmall" data-content="humidity"></p>
+                            <p class="textleft margin0 weatherSmall" data-content="preciprate"></p>
+                            <p class="textleft margin0 weatherSmall" data-content="precipaccum"></p>
+                            <p class="textleft margin0 weatherSmall" data-content="pressure"></p>
+                        </div>
+                        <div class="col-sm-5">
+                            <p class="textleft margin0 weatherSmall" data-content="windchill"></p>
+                            <p class="textleft margin0 weatherSmall" data-content="visibility"></p>
+                            <p class="textleft margin0 weatherSmall" data-content="uv"></p>
+                            <p class="textleft margin0 weatherSmall" data-content="solarradiation"></p>
+                            <p class="textleft margin0 weatherSmall" data-content="heatindex"></p>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="row" id="forecast-display"></div>
             </div>
             <div class="modal-footer">
