Clean up/Improvements

--- a/templates/openweathermap.html
+++ b/templates/openweathermap.html
@@ -1,8 +1,8 @@
 <div class="row vertical-align">
     <div class="col-xs-4 col-sm-5 padding0">
         <div class="pull-right">
-            <p class="weatherRight weatherLarge" data-content="city"></p>
-            <p class="weatherRight weatherDesc" data-content="curcondition"></p>
+            <p class="textright margin0 weatherLarge" data-content="city"></p>
+            <p class="textright margin0 weatherDesc" data-content="curcondition"></p>
         </div>
     </div>
     <div class="col-xs-4 col-sm-2 paddingLeftRight5">
@@ -10,8 +10,8 @@
     </div>
     <div class="col-xs-4 col-sm-5 padding0">
         <div class="pull-left">
-            <p class="weatherLeft weatherLarge" data-content="curtemp"></p>
-            <p class="weatherLeft" data-content="curLowHigh"></p>
+            <p class="textleft margin0 weatherLarge" data-content="curtemp"></p>
+            <p class="textleft margin0" data-content="curLowHigh"></p>
         </div>
     </div>
 </div>
